--- a/Road Safety System/src/main/resources/application.properties
+++ b/Road Safety System/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Road Safety System
+
+# Conexion mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/rss_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
